ecmascript/parser/tests/test262-error-references/fail/36c32455da0fd7e8.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/36c32455da0fd7e8.js:1:6
  |
1 | [0,{a=0}] = 0
  |      ^

